# birdclef-2024

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini  requirements.txt
birdclef/: config.py  species.txt  tasks.py  transforms.py  utils.py
birdclef.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
birdclef/experiment/: data.py  model.py
birdclef/inference/: base.py  birdnet.py  encodec.py  vocalization.py
birdclef/label/: data.py  encodec_inference.py  google_inference.py  inference.py  submit.py  workflow.py
birdclef/torch/: losses.py
notebooks/modeling/: 2024-05-27-acm-fpgrowth-google-voice.ipynb  2024-06-04-mg-torch-data-testing.ipynb  2024-06-06-acm-test-google-voice-emb.ipynb  2024-06-10-acm-onnx.ipynb  2024-06-11-acm-submission-format.ipynb  2024-06-17-acm-frequent-pattern.ipynb  2024-06-30-acm-profiling.ipynb
notebooks/preprocessing/: 2024-01-30-mg-bird-species-histogram.ipynb  2024-02-10-encodec.ipynb  2024-03-18-encodec-embeddings-old.ipynb  2024-03-18-encodec-lm.ipynb  2024-03-28-encodec-invariance.ipynb  2024-03-30-encodec-embeddings.ipynb  2024-06-14-acm-birdnet.ipynb  (+4 more)
scripts/: install_gcs_connector.sh
tests/: conftest.py  test_data_module.py  test_experiment_google_vocalization.py  test_experiment_label_data.py  test_experiment_label_submit.py  test_inference_birdnet.py  test_inference_encodec.py  test_inference_vocalization.py  test_label_data.py  test_label_encodec_inference.py  test_label_google_inference.py  test_label_inference.py  test_label_submit.py  test_torch_classifier.py
workflow/: prep_trunc_audio.py
(+34 files in other folders)
